# f5-voicer

./: README.md  client.py  pyproject.toml  run.py  server.py
src/f5_voicer/: client.py  server.py
